--- a/config.conf
+++ b/config.conf
@@ -1,11 +1,11 @@
 server1:
     user: root
-    password: 
+    password: 'senhaDev#123'
     port: 3306 # for MySQL this is 3306
     host: localhost # usually localhost or 127.0.0.1
 server2:
     user: root
-    password: 
+    password: 'senhaDev#123'
     port: 3306 # for MySQL this is 3306
     host: localhost # usually localhost or 127.0.0.1
 template: templates/simple-db-migrate.tmpl
