--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,18 +1,47 @@
-FROM fedora:25
+FROM fedora:30
 
 MAINTAINER salviof@gmail.com coletivojava.com.br
 
-RUN rpm -ivh https://dev.mysql.com/get/mysql57-community-release-fc25-9.noarch.rpm && \
-    dnf -y install mysql-utilities
+
+
+#COPY mysql57-community-release-el7-9.noarch.rpm mysql57-community-release-el7-9.noarch.rpm
+
+
+
+#RUN yum install epel-release -y
+RUN sudo dnf install passenger -y
+RUN yum update -y
 RUN dnf install git -y
 COPY ./instalacao.sh /bin/instalacao.sh
 COPY composer.phar /bin/composer.phar
-RUN chmod +x /bin/instalacao.sh /bin/composer.phar
+
 RUN  mkdir /home/superBits/devTools/ -p
 RUN  git clone https://github.com/salviof/DBDiff.git
 RUN mv ./DBDiff /home/superBits/devTools/ -f
+
+WORKDIR /home/superBits/
+RUN git clone https://github.com/salviof/superBitsDevOps.git
+
 RUN dnf install sudo -y
+#RUN sudo rpm -ivh mysql57-community-release-el7-9.noarch.rpm
+#RUN sudo yum -y install  mysql-server 
+
 RUN yum install composer -y
+
+
+#RUN sudo yum install xmlstarlet -y
+
+
+
+
+
+COPY composer.phar /home/superBits/devTools/DBDiff/composer.phar
+COPY gerarScript.sh /home/superBits/devTools/DBDiff/gerarScript.sh
+COPY testeSimples.sh /home/superBits/devTools/DBDiff/testeSimples.sh
+
+RUN chmod +x /bin/instalacao.sh /bin/composer.phar /home/superBits/devTools/DBDiff/testeSimples.sh
+RUN  mkdir /home/superBits/devTools/DBDiff/referencia -p
+RUN  mkdir /home/superBits/devTools/DBDiff/novoBanco -p
 WORKDIR /home/superBits/devTools/DBDiff/
 
 RUN composer install --prefer-dist
@@ -22,4 +51,6 @@ RUN php composer-setup.php
 RUN php -r "unlink('composer-setup.php');"
 RUN sudo dnf install php-mysqli -y
 WORKDIR /home/superBits/devTools/DBDiff/
-RUN php composer.phar install
+#RUN php composer.phar install
+ENTRYPOINT ["/bin/bash", "/home/superBits/devTools/DBDiff/testeSimples.sh"]
+
